# MediaMetaDataExtractAI

./: .env.build  .gitignore  API_ENDPOINTS_SUMMARY.md  API_FLOW_DOCUMENTATION.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  AWS_DEPENDENCIES_FIX.md  BUILD_FIXES.md  BUILD_FIX_SUMMARY.md  BUILD_WORKING_SOLUTION.md  COMPLETE_API_FLOW_GUIDE.md  COMPLETE_LOCAL_FLOW.md  Cargo.toml  DATABASE_DESIGN_ANALYSIS.md  DATABASE_SETUP.md  FINAL_BUILD_SOLUTION.md  FIX_RUSTLS_VERSION.md  GOOGLE_CREDENTIALS_SET.md  GOOGLE_SIGNIN_QUICK_START.md  GOOGLE_SSO_SETUP.md  HOW_TO_APPLY_RULES.md  IMPLEMENTATION_COMPLETE.md  INSTALL_RUST.ps1  JWT_IMPLEMENTATION_COMPLETE.md  JWT_SECRET_SETUP.md  LOCAL_TESTING_GUIDE.md  MEDIA_DOWNLOAD_API.md  QUICK_FIX.md  QUICK_FIX_AWS_DEPS.md  QUICK_START.md  QUICK_START_API.md  QUICK_START_LOCAL.md  README.md  RUST_INSTALLATION.md  SETUP_ENV.md  UPLOAD_IMPLEMENTATION_SUMMARY.md  VS2022_BUILD_FIX.md  WINDOWS_SETUP.md  build-cmd.bat  build.ps1  cargo-build-auto-detect.ps1  (+8 more)
migrations/: 001_initial_schema.sql
src/: config.rs  main.rs
src/api/: middleware.rs  mod.rs  openapi.rs
src/api/handlers/: admin.rs  auth.rs  graph.rs  media.rs  metadata.rs  mod.rs  workflow.rs
src/api/routes/: admin.rs  auth.rs  graph.rs  media.rs  metadata.rs  mod.rs  workflow.rs
src/aws/: mod.rs  s3.rs  step_functions.rs
src/controllers/: base.rs  egress.rs  ingress.rs  local_ingress.rs  mod.rs
src/db/: connection.rs  mod.rs
src/db/repositories/: action_repository.rs  asset_repository.rs  graph_repository.rs  mod.rs  user_repository.rs  workflow_repository.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: action_record.rs  asset.rs  metadata.rs  mod.rs  user.rs  workflow.rs
src/services/: ai_processing.rs  asset_service.rs  google_oauth.rs  graph_service.rs  local_storage.rs  mod.rs  preprocessing_service.rs  workflow_service.rs
src/utils/: hash.rs  jwt.rs  mod.rs
